0.7.0 (currently working on)
- [#2203] Change: Move tx_seminars_seminar::getAdditionalQueryForOtherDates() to tx_seminars_seminarbagbuilder
- [#2202] Change: Move tx_seminars_seminar::getAdditionalQueryForNextDay() to tx_seminars_seminarbagbuilder
- [#2114] Feature: Add a new flavor "favorites list"
- [#2199] Feature: Add a method limitToVip() to tx_seminars_seminarbagbuilder
- [#2205] Fix: tx_seminars_bagbuilder::setTestMode() does not work with additional tables
- [#2200] Feature: Add a method limitToDateAndSingleRecords() to tx_seminars_seminarbagbuilder
- [#2201] Feature: Add a method limitToOwner() to tx_seminars_seminarbagbuilder
- [#2204] Feature: Add a method setLimit() to tx_seminars_bagbuilder
- [#2198] Feature: Add a method limitToTopicRecords() to tx_seminars_seminarbagbuilder
- [#2196] Feature: Allow to set the orderBy via a method in tx_seminars_bagbuilder
- [#1580] Change: Move the seminarbag::getAdditionalQuery* functions to the seminarbagbuilder
- [#2158] Feature: Allow to add additional tables in the bag builder via a method
- [#1583] Feature: Add a registration bag builder
- [#2165] Feature: Show the accreditation number in the mod2 events list and registrations list
- [#2181] Change: Move the category list to its own class (a view)
- [#2160] Change: Add methods for hiding and un-hiding columns in tx_seminars_pi1
- [#2178] Feature: Add methods hideSubpartsArray and unhideSubpartsArray to tx_seminars_templatehelper
- [#1951] Feature: Allow the CSV export of registration data in the "my VIP events" list
- [#1949] Feature: Allow VIP users to FE-edit their events
- [#2155] Fix: Unit test failure: tx_seminars_eventEditorChild_testcase::testGetEventSuccessfullySavedUrlReturnsUrlStartingWithHttp
- [#1137] Change: Change =& new to = new and remove the & from before function names
- [#2156] Add a Dutch manual, thanks to Nico Deblauwe
- [#2146] Change: Move the setting/hiding of fields from pi1::createSingleView to separate functions