@@ -22,6 +22,11 @@
 * This copyright notice MUST APPEAR in all copies of the script!
 ***************************************************************/
 
+require_once(t3lib_extMgm::extPath('seminars').'lib/tx_seminars_constants.php');
+require_once(t3lib_extMgm::extPath('seminars').'class.tx_seminars_categorybag.php');
+
+require_once(t3lib_extMgm::extPath('oelib').'class.tx_oelib_testingFramework.php');
+
 /**
  * Testcase for the categorybag class in the 'seminars' extensions.
  *
@@ -29,39 +34,30 @@
  * @subpackage	tx_seminars
  *
  * @author		Oliver Klee <typo3-coding@oliverklee.de>
+ * @author		Niels Pardon <mail@niels-pardon.de>
  */
-
-require_once(t3lib_extMgm::extPath('seminars').'lib/tx_seminars_constants.php');
-require_once(t3lib_extMgm::extPath('seminars').'class.tx_seminars_categorybag.php');
-
-require_once(t3lib_extMgm::extPath('oelib').'class.tx_oelib_testingFramework.php');
-
 class tx_seminars_categorybag_testcase extends tx_phpunit_testcase {
+	/**
+	 * @var	tx_seminars_categorybag
+	 */
 	private $fixture;
-	private $testingFramework;
 
-	/** the UID of the first event record in the DB */
-	private $uidOfFirstCategory = 0;
+	/**
+	 * @var	tx_oelib_testingFramework
+	 */
+	private $testingFramework;
 
 	protected function setUp() {
 		$this->testingFramework = new tx_oelib_testingFramework('tx_seminars');
 
-		$this->uidOfFirstCategory = $this->testingFramework->createRecord(
-			SEMINARS_TABLE_CATEGORIES,
-			array('title' => 'test category 1')
-		);
-		$this->testingFramework->createRecord(
-			SEMINARS_TABLE_CATEGORIES,
-			array('title' => 'test category 2')
-		);
+		$this->testingFramework->createRecord(SEMINARS_TABLE_CATEGORIES);
 
-		$this->fixture = new tx_seminars_categorybag();
+		$this->fixture = new tx_seminars_categorybag('is_dummy_record=1');
 	}
 
 	protected function tearDown() {
 		$this->testingFramework->cleanUp();
-		unset($this->fixture);
-		unset($this->testingFramework);
+		unset($this->fixture, $this->testingFramework);
 	}
 
 
@@ -70,15 +66,9 @@ class tx_seminars_categorybag_testcase extends tx_phpunit_testcase {
 	///////////////////////////////////////////
 
 	public function testBagCanHaveAtLeastOneElement() {
-		$this->assertGreaterThan(
-			0, $this->fixture->getObjectCountWithoutLimit()
-		);
-
-		$this->assertNotNull(
-			$this->fixture->getCurrent()
-		);
-		$this->assertTrue(
-			$this->fixture->getCurrent()->isOk()
+		$this->assertEquals(
+			1,
+			$this->fixture->getObjectCountWithoutLimit()
 		);
 	}
 }
